<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.securitysettings.ChangePasswordFragment"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/back_option"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/back_option"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/back" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/change_password"
            android:fontFamily="@font/lato_medium"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/re_enter_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/save"
        android:fontFamily="@font/lato_medium"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>