<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.legalandhelp.TermsAndConditionsFragment"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/back_option"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/back_option"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/back" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/terms_conditions"
            android:fontFamily="@font/lato_medium"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/lorem_ipsum"
        android:padding="20dp"
        android:fontFamily="@font/lato_regular"
        android:textSize="15sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>