<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.legalandhelp.FAQsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/hot_pink"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/back_option"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/back" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/faq"
            android:fontFamily="@font/lato_medium"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/what_is_digslist_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/action_bar"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/what_is_digslist_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_digslist"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/text_shade_2"
                android:textSize="16sp"
                android:maxLines="4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/show_option_down"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/go" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/how_does_digslist_work_cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/what_is_digslist_cardview"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/how_does_digslist_work_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/how_does_digslist_work_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_does_digslist_work"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/text_shade_2"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/how_does_digslist_work_option"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/go" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/what_happens_cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/how_does_digslist_work_cardview"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/what_happens_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/what_happens_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_happens_when_i_find_a_digsmate"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/text_shade_2"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/what_happens_option"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/go" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/what_requirement_cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/what_happens_cardview"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/what_requirement_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/what_requirement_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_are_the_requirement_to_register"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/text_shade_2"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/what_requirement_option"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/go" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/why_do_you_need_cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/what_requirement_cardview"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/why_do_you_need_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/why_do_you_need_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/why_do_you_need_some_personal_details"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/text_shade_2"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/why_do_you_need_option"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/go" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/what_are_the_process_cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/why_do_you_need_cardview"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/what_are_the_process_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/what_are_the_process_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_are_the_process_of_getting_a_digsmate"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/text_shade_2"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/what_are_the_process_option"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/go" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/what_happens_to_violators_cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/what_are_the_process_cardview"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/what_happens_to_violators_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/what_happens_to_violators_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_happens_to_violators"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/text_shade_2"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/what_happens_to_violators_option"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/go" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>